# XAI_miniProject

./: .gitignore  README.md  pyproject.toml  requirements-ontolearn-deps.txt  requirements-ontolearn.txt  ter_log_aifb  ter_log_mutag
configs/: aifb.yaml  mutag.template.yaml  mutag.yaml  mutag_node_id.yaml
src/xai_miniproject/: cli.py  config.py  data.py  explain.py  model.py  train.py  utils.py
tests/: test_config.py
